docs: 完善项目说明与可靠性注释